// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Badge shoud match color snapshot 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-positive-subtle border rounded-md text-positive"
      data-accent-color="green"
    >
      Foobar
    </span>
  </div>
</body>
`;

exports[`Badge shoud match size snapshot 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 border-neutral border rounded-md"
    >
      Foobar
    </span>
  </div>
</body>
`;

exports[`Badge shoud match variant snapshot 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-neutral border rounded-md bg-surface-neutral-subtle"
    >
      Foobar
    </span>
  </div>
</body>
`;
